update to initial website version

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ first_name: Tim
 middle_name: 
 last_name: Schopf
 contact_note: >
-  You can even add a little note about which of these is the best way to reach you.
+  Feel free to contact me on any topic!
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
@@ -19,7 +19,7 @@ lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: ⚛️ # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
 url: https://timschopf.github.io # the base hostname & protocol for your site
-baseurl: . # the subpath of your site, e.g. /blog/. Leave blank for root
+baseurl: . #/blog # the subpath of your site, e.g. set to /blog during local development with Docker. Leave blank for root. Set to . for deployment with GitHub pages.
 last_updated: false # set to true if you want to display last updated in the footer
 impressum_path: # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
 back_to_top: true # set to false to disable the back to top button
@@ -42,7 +42,7 @@ repo_trophies:
 # will use title and url fields
 # Take a look to https://github.com/jekyll/jekyll-feed for more customization
 
-rss_icon: true
+rss_icon: false
 
 # -----------------------------------------------------------------------------
 # Layout
@@ -88,7 +88,7 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: al-folio # blog_name will be displayed in your blog page
+blog_name: Tim Schopf # blog_name will be displayed in your blog page
 blog_description: a simple whitespace theme for academics
 permalink: /blog/:year/:title/
 lsi: false # produce an index for related posts
@@ -193,6 +193,14 @@ exclude:
   - README.md
   - readme_preview/
   - vendor
+  - _pages/blog.md
+  - _pages/profiles.md
+  - _pages/repositories.md
+  - _pages/dropdown.md
+  - _pages/teaching.md
+  - _pages/cv.md
+  - _pages/projects.md
+  - _news/
 keep_files:
   - CNAME
   - .nojekyll
