--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -3,81 +3,44 @@
   contents:
     - name: Full Name
       value: Tim Schopf
-    - name: Date of Birth
-      value: 19th March 1994
+    - name: Location
+      value: Dresden, Germany
+    - name: Research Interests
+      value: Large Language Models, AI Agents, Knowledge Graphs
     - name: Languages
       value: English, German
+
+- title: Professional Experience
+  type: time_table
+  contents:
+    - title: Postdoctoral Researcher
+      institution: ScaDS.AI & Dresden University of Technology (Chair of Scalable Software Architectures for Data Analytics), Germany
+      year: 01/2025–Present
+    - title: Research Associate
+      institution: Technical University of Munich (Chair of Software Engineering for Business Information Systems), Germany
+      year: 09/2020–08/2024
+    - title: Master’s Thesis Student
+      institution: MHP Management and IT Consulting, Germany
+      year: 11/2019–04/2020
+    - title: Data Science Intern
+      institution: Mercedes-Benz Group, Germany
+      year: 10/2018–03/2019
+    - title: Student Research Assistant
+      institution: Karlsruhe Institute of Technology, Germany
+      year: 02/2018–09/2018
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
-      description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
-      description:
-        - Description 1.
-        - Description 2.
-
-- title: Experience
-  type: time_table
-  contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
-      description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
-      description:
-        - Description 1.
-        - Description 2.
-
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
-      description:
-
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
-
-- title: Open Source Projects
-  type: time_table
-  contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
-
-- title: Honors and Awards
-  type: time_table
-  contents:
-    - year: 1921
-      items:
-        - Nobel Prize in Physics
-        - Matteucci Medal
-    - year: 2029
-      items:
-        - Max Planck Medal
+    - title: PhD (Dr. rer. nat.) in Computer Science
+      institution: Technical University of Munich, Germany
+      year: 01/2021–Present
+    - title: Master of Science (M.Sc.) in Information Engineering and Management
+      institution: Karlsruhe Institute of Technology, Germany
+      year: 10/2017–08/2020
+    - title: Bachelor of Science (B.Sc.) in Information Systems
+      institution: Universities of Stuttgart & Hohenheim, Germany
+      year: 10/2012–09/2017
 
 - title: Academic Interests
   type: nested_list
@@ -90,8 +53,3 @@
       items:
         - Description 1.
         - Description 2.
-
-- title: Other Interests
-  type: list
-  contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
