--- a/_config.yml
+++ b/_config.yml
@@ -12,12 +12,12 @@ description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
-keywords: jekyll, jekyll-theme, academic-website, portfolio-website # add your own keywords or leave empty
+keywords: AI, research, science, ScaDS.AI, LLMs, knowledge graphs, TUD # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
-icon: ⚛️ # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
+icon: favicon.png # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
 url: https://timschopf.github.io # the base hostname & protocol for your site
-baseurl: . #/blog # the subpath of your site, e.g. set to /blog during local development with Docker. Leave blank for root. Set to . for deployment with GitHub pages.
+baseurl: # the subpath of your site, e.g. set to /about during local development with Docker. Leave blank for root.
 last_updated: false # set to true if you want to display last updated in the footer
 impressum_path: # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
 back_to_top: true # set to false to disable the back to top button
