--- a/_config.yml
+++ b/_config.yml
@@ -9,15 +9,15 @@ last_name: Schopf
 contact_note: >
   Feel free to contact me on any topic!
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
+  Personal website of Tim Schopf.
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
-keywords: AI, research, science, ScaDS.AI, LLMs, knowledge graphs, TUD # add your own keywords or leave empty
+keywords: Tim Schopf, AI, research, science, NLP, LLMs, large language models, KGs, knowledge graphs # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
-icon: favicon.png # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
+icon: icons/favicon.png # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
 url: https://timschopf.github.io # the base hostname & protocol for your site
-baseurl: "" # the subpath of your site, e.g. set to /about during local development with Docker. Leave blank for root.
+baseurl: # the subpath of your site, e.g. set to /about during local development with Docker. Leave blank for root.
 last_updated: false # set to true if you want to display last updated in the footer
 impressum_path: # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
 back_to_top: true # set to false to disable the back to top button
@@ -87,7 +87,7 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # -----------------------------------------------------------------------------
 
 blog_name: Tim Schopf # blog_name will be displayed in your blog page
-blog_description: a simple whitespace theme for academics
+blog_description: Personal blog of Tim Schopf
 permalink: /blog/:year/:title/
 lsi: false # produce an index for related posts
 
@@ -270,8 +270,8 @@ display_categories: ["external-services"] # these categories will be displayed o
 # -----------------------------------------------------------------------------
 
 scholar:
-  last_name: [Einstein]
-  first_name: [Albert, A.]
+  last_name: [Schopf]
+  first_name: [Tim]
 
   style: apa
   locale: en
