--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ navbar_fixed: true
 footer_fixed: true
 search_enabled: true
 socials_in_search: true
-posts_in_search: true
+posts_in_search: false #ToDo: set to true, once teh website includes posts
 bib_search: true
 
 # Dimensions
