--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -34,7 +34,7 @@
   contents:
     - title: PhD (Dr. rer. nat.) in Computer Science
       institution: Technical University of Munich, Germany
-      year: 01/2021–Present
+      year: 01/2021–11/2025
     - title: Master of Science (M.Sc.) in Information Engineering and Management
       institution: Karlsruhe Institute of Technology, Germany
       year: 10/2017–08/2020
